# rust-learning

./: .gitignore
cli/: Cargo.toml  main
cli/resources/: 404.html  hello.html
cli/src/: TODO.md  blackjack.rs  main.rs
cli/src/axum_server/: handlers.rs  server.rs
cli/src/blackjack/: deck.rs  game.rs  input.rs  mod.rs  player.rs
cli/src/cli/: mod.rs
cli/src/input/: input.rs
cli/src/mbta/: mbta.rs  mod.rs
cli/src/server/: lib.rs  server.rs
cli/src/tide_server/: handlers.rs  jwt.rs  middleware.rs  mod.rs  server.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hackattic/: Cargo.toml
hackattic/src/: hackattic.rs  main.rs  mod.rs
hello_cargo/: Cargo.toml
hello_world/: Cargo.toml  main
hello_world/src/: main.rs
passwords/: .env  Cargo.toml
passwords/src/: hackattic.rs  main.rs  mod.rs  oxfat.rs
rustlings-old/: Cargo.toml
rustlings-old/exercises/: quiz4.rs
rustlings-old/exercises/conversions/: from_str.rs  try_from_into.rs
rustlings-old/exercises/error_handling/: errors2.rs
rustlings-old/exercises/functions/: functions1.rs
rustlings-old/exercises/option/: option2.rs
rustlings-old/exercises/primitive_types/: primitive_types3.rs
rustlings-old/exercises/standard_library_types/: iterators2.rs  iterators4.rs  iterators5.rs
rustlings-old/exercises/structs/: structs3.rs
rustlings-old/exercises/threads/: threads1.rs
rustlings/exercises/: quiz1.rs
rustlings/exercises/collections/: hashmap1.rs  hashmap2.rs  vec1.rs  vec2.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors1.rs  errors4.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/intro/: intro2.rs
rustlings/exercises/macros/: macros3.rs
rustlings/exercises/option/: option1.rs  option2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/standard_library_types/: box1.rs  iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs
rustlings/exercises/structs/: structs1.rs  structs3.rs
rustlings/exercises/tests/: tests2.rs
rustlings/exercises/traits/: traits2.rs
rustlings/exercises/variables/: variables2.rs
variables/: Cargo.toml
variables/src/: fibo.rs  main.rs
