[package]
name = "cli"
version = "0.1.0"
authors = ["helloitsjoe <jboyle617@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.4"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.6.0", features = ["attributes"] }
async-trait = "0.1"
http-types = "2.10"
serde_json = "1.0"
axum = "0.6"
chrono = "0.4"
tide = "0.16"
