[package]
name = "hackattic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dtmf = "0.1.5"
hound = "3.5.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rodio = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
wav = "1.0.0"
