[package]
name = "passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
md5 = "0.7.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.11", features = ["full"] }
zip = "0.6.6"
